--- a/robbie.vcxproj
+++ b/robbie.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{77012ADC-B2AB-44B4-B1AE-7AD546D9B327}</ProjectGuid>
+    <ProjectGuid>{1CCA9C76-DBCA-4066-920C-D863F7B173A9}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>RRS</RootNamespace>
+    <RootNamespace>robbie</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -83,7 +83,8 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -96,7 +97,8 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -110,7 +112,8 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -127,7 +130,8 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -142,34 +146,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
+    <ClCompile Include="arm.cpp" />
+    <ClCompile Include="battery.cpp" />
+    <ClCompile Include="head.cpp" />
+    <ClCompile Include="locomotor.cpp" />
+    <ClCompile Include="robotmodelc.cpp" />
+    <ClCompile Include="torso.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Arm.h" />
-    <ClInclude Include="Battery.h" />
-    <ClInclude Include="Head.h" />
-    <ClInclude Include="Locomotor.h" />
-    <ClInclude Include="Menu_Items.h" />
-    <ClInclude Include="Robot_Parts.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
-    <ClInclude Include="Torso.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Arm.cpp" />
-    <ClCompile Include="Battery.cpp" />
-    <ClCompile Include="Head.cpp" />
-    <ClCompile Include="Locomotor.cpp" />
-    <ClCompile Include="Menu_Items.cpp" />
-    <ClCompile Include="Robot_Parts.cpp" />
-    <ClCompile Include="RRS.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="Torso.cpp" />
+    <ClInclude Include="arm.h" />
+    <ClInclude Include="battery.h" />
+    <ClInclude Include="head.h" />
+    <ClInclude Include="locomotor.h" />
+    <ClInclude Include="torso.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
